--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     </head>
     <body>
         PSFree: A PS4/PS5 Exploit Chain<br>
+        PS4 versions vulnerable: 6.xx-9.xx (tested 6.50-9.60)<br>
+        PS5 versions vulnerable: 1.xx-5.xx (tested 1.00-5.50)<br>
         Donation (Monero/XMR):<br>
         86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS<br>
         See <a href='./about.html' data-jslicense='1'>JavaScript license information</a> for the
