--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>exploit</title>
+        <title>PSFree-Lapse Exploit For 9.00</title>
         <style>
             @font-face {
                 font-family: 'logging';
-                src: url('./fonts/LiberationMono-Regular.ttf');
+                src: url('fonts/LiberationMono-Regular.ttf');
             }
             #console {
                 font-family: 'logging';
@@ -31,13 +31,12 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     </head>
     <body>
         PSFree: A PS4/PS5 Exploit Chain<br>
-        PS4 versions vulnerable: 8.xx-9.xx (tested 8.00-9.60)<br>
-        PS5 versions vulnerable: 1.xx-5.xx (tested 1.00-5.50)<br>
         Donation (Monero/XMR):<br>
         86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS<br>
         See <a href='./about.html' data-jslicense='1'>JavaScript license information</a> for the
         source code and license.<br>
         <pre id='console'></pre>
     </body>
+    <script src="payload.js"></script>
     <script type='module' src='./alert.mjs'></script>
 </html>
